# api-livros

./: pyproject.toml  requirements.txt
src/: app.py
